# rust-rest-api

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
migrations/2024-01-12-174053_create_users_table/: down.sql  up.sql
src/: libs.rs  main.rs
src/blueprints/: users_controller.rs
src/user/: mod.rs  models_users.rs  schema.rs  use_repository.rs  user_models.rs  user_repository.rs  user_service.rs
