[package]
name = "rust_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
axum-macros = "0.4.0"
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
diesel = { version = "2.1.4", features = ["postgres"] }
diesel_migrations = "2.1.0"
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
pwhash = "1"
